--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
 
  <img src  =https://farm6.staticflickr.com/5610/15555448015_b3553fe829_o.jpg>
 
-<p><strong>생일 축하합니다~  생일 축하 합니다~ <br>
-사랑하는 솔이의 생일 축하 합니다.~  </strong></p>
+<p><strong>생일 축하합니다~  <i class="fa fa-music"></i><Br>
+  생일 축하 합니다~ <i class="fa fa-music"></i><br>
+사랑하는 솔이의 생일 축하 합니다.~ <i class="fa fa-birthday-cake"></i> </strong></p>
 
 <p>안녕 솔아. 호주 이모야.</p>
 우리 솔이가 벌써 세살이 되었네. 꼬물꼬물하던 아가 솔이가 이제 커서 이렇게 예쁜 공주님이 되었다니 믿겨지지가 않아. <Br>
