--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
  
 <h3><i class="fa fa-birthday-cake"></i> Happy Birthday <i class="fa fa-birthday-cake"></i> </h3> 
 
- <img src  =https://farm6.staticflickr.com/5610/15555448015_b3553fe829_o.jpg>
+<img src  =https://farm6.staticflickr.com/5610/15555448015_b3553fe829_o.jpg>
+<i>코코몽이 마련한 생일 파티에 참석한 예솔 공주님.﻿</i>
+
+<P>
+<P>
 
 <p><strong>생일 축하합니다~  <i class="fa fa-music"></i><Br>
   생일 축하 합니다~ <i class="fa fa-music"></i><br>
