--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
  
 <link rel="stylesheet" href="http://sookjin.com/css/poole.css">
 <link rel="stylesheet" href="http://sookjin.com/css/syntax.css">
-<link rel="stylesheet" href="http://sookjin.com/css/hyde.css">
+<link rel="stylesheet" href="stylesheets/hyde.css">
+
+
 <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
 <link href="" rel="alternate" type="application/rss+xml" title="sookjin" />
