--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
   
-  <title>Ohyesol.com</title>
+  <title>ohyesol.com</title>
  
 <link rel="stylesheet" href="http://sookjin.com/css/poole.css">
 <link rel="stylesheet" href="http://sookjin.com/css/syntax.css">
