--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <h1 class="brand"><a href="http://sookjin.com">Oh! Yesol</a></h1>
+      <h1 class="brand"><a href="http://ohyesol.com">Oh! Yesol</a></h1>
       <p class="lead">
        Happy 3rd Birthday!
       </p>
